updated build.gradle to use preview features