@@ -201,6 +201,7 @@ javafx {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+    options.compilerArgs += ['--enable-preview']
 }
 
 tasks.withType(Test) {
